# toad-mcp

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  main.rs  server.rs
src/tools/: analysis.rs  context.rs  discovery.rs  management.rs  mod.rs
tests/: mcp_tests.rs
