[package]
name = "toad-mcp"
version = "1.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
async-trait = "0.1"
toad-core = { path = "../../crates/toad-core" }
toad-discovery = { path = "../../crates/toad-discovery" }
toad-manifest = { path = "../../crates/toad-manifest" }
toad-ops = { path = "../../crates/toad-ops" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
rmcp = { version = "0.8", features = ["client", "transport-io"] }
