[package]
name = "toad-mcp"
version = "1.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
anyhow = "1"
async-trait = "0.1"
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toad-core = { path = "../../crates/toad-core" }
toad-discovery = { path = "../../crates/toad-discovery" }
toad-manifest = { path = "../../crates/toad-manifest" }
toad-ops = { path = "../../crates/toad-ops" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rmcp = { version = "0.8", features = ["client", "transport-io"] }
tempfile = "3.10"
